2006-01-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/page.scm (make-page-stencil): read X-offset from paper-system.
	(page-translate-systems): new function: take into account Y-offset.

	* Documentation/topdocs/NEWS.tely (Top): document new features.

	* input/regression/page-layout-manual-position.ly (Module): new
	file.

2006-01-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/file-path.cc (path::parse_path): Oops.

	* Finish std::string interface.  For now, use std:: marker
	throughout for easy s/r.

2006-01-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/putting.itely (Score is a single musical
	expression): typo.
	(Score is a single musical expression): more typos.

	* scm/page.scm (annotate-space-left): thinko.
	(annotate-page): more thinkos.

2006-01-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/layout-page-layout.scm (write-page-breaks): record tweaks
	for different \score blocks separately.
	(post-process-pages): put write-page-layout into paper block.

	* lily/output-def.cc (get_parser): new file.

	* lily/output-def-scheme.cc (LY_DEFINE): ly:output-def-parser, new
	file.

	* lily/include/output-def.hh (class Output_def): add parser_ member.

	* input/regression/page-layout-twopass.ly (Module): new file.

	* scm/lily.scm: remove cpp hack.

	* lily/lyric-engraver.cc (get_voice_to_lyrics): use NPOS everywhere.

2006-01-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (c-clean): New target.

	* flower/include/std-string.hh: String/std::string compatibility:
	Use NPOS for `not found' (iso -1), use ssize for length () and pos
	type.

	* flower/rational.cc: 
	* flower/include/rational.hh: 

	* flower/offset.cc: 
	* flower/include/offset.hh: 

	* flower/interval.cc: 
	* flower/include/interval.hh: 

	* flower/string-convert.cc: 
	* flower/include/string-convert.hh: Use std::string [interface].
	Update callers.

2006-01-25  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/index.html.in: clean up.
