@@ -46,8 +46,29 @@ the @uref{../,LilyPond Documentation}
 
 
 @itemize @bullet
+@item Alignments of staves may be tuned per system.   
+@lilypond[]
+\relative c'' \new StaffGroup <<
+      \new Staff { c1 c }
+      \new Staff { c c  }
+      \new Staff { 
+	\overrideProperty
+	#"Score.NonMusicalPaperColumn"
+	#'line-break-system-details
+	#'((alignment-offsets . (0 -5 -20)))
+	c1 \break
+	\overrideProperty
+	#"Score.NonMusicalPaperColumn"
+	#'line-break-system-details
+	#'((alignment-offsets . (0 -15 -20)))
+	c1 
+      }
+    >>
+@end lilypond
 
-@item Systems individual systems may be positioned manually.
+This feature was sponsored by Trevor Bača.
+
+@item Individual systems may be positioned manually,
 
 @lilypond[]
 \header{
@@ -82,8 +103,11 @@ This feature was sponsored by Trevor Bača and Nicolas Sceaux.
 
 @item A linebreaking configuration can now be saved as a @file{.ly}
 file automatically. This allows vertical alignments to be stretched to
-fit pages in a second formatting run. This feature was sponsored by  
-Trevor Bača and Nicolas Sceaux.
+fit pages in a second formatting run. See
+@inputfileref{input/regression/,page-layout-twopass.ly} for an
+example.
+
+This feature was sponsored by Trevor Bača and Nicolas Sceaux.
 
 @item The tie formatting for chords has been further polished. More
 cases are handled gracefully, and all scoring parameters may now be
